# meta

./: CMakeLists.txt  readme.md
include/meta/: append.h  apply.h  assertion_fail.h  concat.h  drop.h  drop_last.h  extract_arguments.h  fold.h  index_of.h  lambda.h  list.h  map.h  nth_element.h  prepend.h  specializes_template.h  string.h  tag.h  take.h  visit.h
test/: append_test.cpp  assertion_fail_test.cpp  concat_test.cpp  drop_test.cpp  list_test.cpp  prepend_test.cpp
